[gd_scene load_steps=9 format=4 uid="uid://l0a3d8fh2l2i"]

[ext_resource type="TileSet" uid="uid://cvuradly8ktbj" path="res://Scenes/Props/Tileset.tres" id="1_nc76c"]
[ext_resource type="PackedScene" uid="uid://w7m6tehvvy3g" path="res://Scenes/Prefabs/player.tscn" id="2_e18hr"]
[ext_resource type="Texture2D" uid="uid://cqkkf7irnsu54" path="res://Scenes/Props/light.png" id="3_ey2ef"]
[ext_resource type="Script" uid="uid://dvcfaevwadi4h" path="res://Scenes/Levels/pan_area.gd" id="4_ey2ef"]
[ext_resource type="PackedScene" uid="uid://dk4gape5x6eww" path="res://Scenes/Prefabs/doorลง.tscn" id="4_m3c88"]
[ext_resource type="AudioStream" uid="uid://dw664g1d3qxae" path="res://เพลง/Food Sizzling Sound Effect.mp3" id="5_m3c88"]
[ext_resource type="AudioStream" uid="uid://dbnjrfgadys6g" path="res://เพลง/Sound Effects - Footsteps.mp3" id="6_m3c88"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwycb"]
size = Vector2(30.5, 35)

[node name="ห้องครัว" type="Node2D"]

[node name="Level" type="Node2D" parent="."]

[node name="SpawnPoint" type="Marker2D" parent="Level"]
unique_name_in_owner = true
position = Vector2(21, 318)

[node name="TileMapLayer2" type="TileMapLayer" parent="Level"]
tile_map_data = PackedByteArray("AAAAABMAAgAGAAkAAAAAABQAAgAGAAgAAAABABMAAgAHAAkAAAABABQAAgAHAAgAAAAAABUAAgAGAAgAAAAAABYAAgAGAAkAAAABABUAAgAHAAgAAAABABYAAgAHAAkAAAAAABcAAgAGAAgAAAABABcAAgAHAAgAAAACABMAAgAGAAkAAAACABQAAgAGAAgAAAADABMAAgAHAAkAAAADABQAAgAHAAgAAAACABUAAgAGAAgAAAACABYAAgAGAAkAAAADABUAAgAHAAgAAAADABYAAgAHAAkAAAACABcAAgAGAAgAAAADABcAAgAHAAgAAAAEABMAAgAGAAkAAAAEABQAAgAGAAgAAAAFABMAAgAHAAkAAAAFABQAAgAHAAgAAAAEABUAAgAGAAgAAAAEABYAAgAGAAkAAAAFABUAAgAHAAgAAAAFABYAAgAHAAkAAAAEABcAAgAGAAgAAAAFABcAAgAHAAgAAAAGABMAAgAGAAkAAAAGABQAAgAGAAgAAAAHABMAAgAHAAkAAAAHABQAAgAHAAgAAAAGABUAAgAGAAgAAAAGABYAAgAGAAkAAAAHABUAAgAHAAgAAAAHABYAAgAHAAkAAAAGABcAAgAGAAgAAAAHABcAAgAHAAgAAAAIABMAAgAGAAkAAAAIABQAAgAGAAgAAAAJABMAAgAHAAkAAAAJABQAAgAHAAgAAAAIABUAAgAGAAgAAAAIABYAAgAGAAkAAAAJABUAAgAHAAgAAAAJABYAAgAHAAkAAAAIABcAAgAGAAgAAAAJABcAAgAHAAgAAAAKABMAAgAGAAkAAAAKABQAAgAGAAgAAAALABMAAgAHAAkAAAALABQAAgAHAAgAAAAKABUAAgAGAAgAAAAKABYAAgAGAAkAAAALABUAAgAHAAgAAAALABYAAgAHAAkAAAAKABcAAgAGAAgAAAALABcAAgAHAAgAAAAMABMAAgAGAAkAAAAMABQAAgAGAAgAAAANABMAAgAHAAkAAAANABQAAgAHAAgAAAAMABUAAgAGAAgAAAAMABYAAgAGAAkAAAANABUAAgAHAAgAAAANABYAAgAHAAkAAAAMABcAAgAGAAgAAAANABcAAgAHAAgAAAAOABMAAgAGAAkAAAAOABQAAgAGAAgAAAAPABMAAgAHAAkAAAAPABQAAgAHAAgAAAAOABUAAgAGAAgAAAAOABYAAgAGAAkAAAAPABUAAgAHAAgAAAAPABYAAgAHAAkAAAAOABcAAgAGAAgAAAAPABcAAgAHAAgAAAAQABMAAgAGAAkAAAAQABQAAgAGAAgAAAARABMAAgAHAAkAAAARABQAAgAHAAgAAAAQABUAAgAGAAgAAAAQABYAAgAGAAkAAAARABUAAgAHAAgAAAARABYAAgAHAAkAAAAQABcAAgAGAAgAAAARABcAAgAHAAgAAAASABMAAgAGAAkAAAASABQAAgAGAAgAAAATABMAAgAHAAkAAAATABQAAgAHAAgAAAASABUAAgAGAAgAAAASABYAAgAGAAkAAAATABUAAgAHAAgAAAATABYAAgAHAAkAAAASABcAAgAGAAgAAAATABcAAgAHAAgAAAAUABMAAgAGAAkAAAAUABQAAgAGAAgAAAAVABMAAgAHAAkAAAAVABQAAgAHAAgAAAAUABUAAgAGAAgAAAAUABYAAgAGAAkAAAAVABUAAgAHAAgAAAAVABYAAgAHAAkAAAAUABcAAgAGAAgAAAAVABcAAgAHAAgAAAAWABMAAgAGAAkAAAAWABQAAgAGAAgAAAAXABMAAgAHAAkAAAAXABQAAgAHAAgAAAAWABUAAgAGAAgAAAAWABYAAgAGAAkAAAAXABUAAgAHAAgAAAAXABYAAgAHAAkAAAAWABcAAgAGAAgAAAAXABcAAgAHAAgAAAAAABIAAgAGAAgAAAABABIAAgAHAAgAAAACABIAAgAGAAgAAAADABIAAgAHAAgAAAAEABIAAgAGAAgAAAAFABIAAgAHAAgAAAAGABIAAgAGAAgAAAAHABIAAgAHAAgAAAAIABIAAgAGAAgAAAAJABIAAgAHAAgAAAAKABIAAgAGAAgAAAALABIAAgAHAAgAAAAMABIAAgAGAAgAAAANABIAAgAHAAgAAAAOABIAAgAGAAgAAAAPABIAAgAHAAgAAAAQABIAAgAGAAgAAAARABIAAgAHAAgAAAASABIAAgAGAAgAAAATABIAAgAHAAgAAAAUABIAAgAGAAgAAAAVABIAAgAHAAgAAAAWABIAAgAGAAgAAAAXABIAAgAHAAgAAAAAABgAAgAGAAgAAAABABgAAgAHAAgAAAACABgAAgAGAAgAAAADABgAAgAHAAgAAAAEABgAAgAGAAgAAAAFABgAAgAHAAgAAAAGABgAAgAGAAgAAAAHABgAAgAHAAgAAAAIABgAAgAGAAgAAAAJABgAAgAHAAgAAAAKABgAAgAGAAgAAAALABgAAgAHAAgAAAAMABgAAgAGAAgAAAANABgAAgAHAAgAAAAOABgAAgAGAAgAAAAPABgAAgAHAAgAAAAQABgAAgAGAAgAAAARABgAAgAHAAgAAAASABgAAgAGAAgAAAATABgAAgAHAAgAAAAUABgAAgAGAAgAAAAVABgAAgAHAAgAAAAWABgAAgAGAAgAAAAXABgAAgAHAAgAAAAAABAAAgASAAAAAAAAABEAAgASAAEAAAABABAAAgATAAAAAAABABEAAgATAAEAAAACABAAAgAUAAAAAAACABEAAgAUAAEAAAADABAAAgAVAAAAAAADABEAAgAVAAEAAAAEABAAAgASAAAAAAAEABEAAgASAAEAAAAFABAAAgATAAAAAAAFABEAAgATAAEAAAAGABAAAgAUAAAAAAAGABEAAgAUAAEAAAAHABAAAgAVAAAAAAAHABEAAgAVAAEAAAAIABAAAgASAAAAAAAIABEAAgASAAEAAAAJABAAAgATAAAAAAAJABEAAgATAAEAAAAKABAAAgAUAAAAAAAKABEAAgAUAAEAAAALABAAAgAVAAAAAAALABEAAgAVAAEAAAAMABAAAgASAAAAAAAMABEAAgASAAEAAAANABAAAgATAAAAAAANABEAAgATAAEAAAAOABAAAgAUAAAAAAAOABEAAgAUAAEAAAAPABAAAgAVAAAAAAAPABEAAgAVAAEAAAAQABAAAgASAAAAAAAQABEAAgASAAEAAAARABAAAgATAAAAAAARABEAAgATAAEAAAASABAAAgAUAAAAAAASABEAAgAUAAEAAAATABAAAgAVAAAAAAATABEAAgAVAAEAAAAUABAAAgASAAAAAAAUABEAAgASAAEAAAAVABAAAgATAAAAAAAVABEAAgATAAEAAAAWABAAAgAUAAAAAAAWABEAAgAUAAEAAAAXABAAAgAVAAAAAAAXABEAAgAVAAEAAAAAAAwAAgAKAAAAAAAAAA0AAgAKAAEAAAAAAA4AAgAKAAIAAAAAAA8AAgAKAAAAAAABAAwAAgALAAAAAAABAA0AAgALAAEAAAABAA4AAgALAAIAAAABAA8AAgALAAAAAAACAAwAAgAMAAAAAAACAA0AAgAMAAEAAAACAA4AAgAMAAIAAAACAA8AAgAMAAAAAAADAAwAAgANAAAAAAADAA0AAgANAAEAAAADAA4AAgANAAIAAAADAA8AAgANAAAAAAAEAAwAAgAKAAAAAAAEAA0AAgAKAAEAAAAEAA4AAgAKAAIAAAAEAA8AAgAKAAAAAAAFAAwAAgALAAAAAAAFAA0AAgALAAEAAAAFAA4AAgALAAIAAAAFAA8AAgALAAAAAAAGAAwAAgAMAAAAAAAGAA0AAgAMAAEAAAAGAA4AAgAMAAIAAAAGAA8AAgAMAAAAAAAHAAwAAgANAAAAAAAHAA0AAgANAAEAAAAHAA4AAgANAAIAAAAHAA8AAgANAAAAAAAIAAwAAgAKAAAAAAAIAA0AAgAKAAEAAAAIAA4AAgAKAAIAAAAIAA8AAgAKAAAAAAAJAAwAAgALAAAAAAAJAA0AAgALAAEAAAAJAA4AAgALAAIAAAAJAA8AAgALAAAAAAAKAAwAAgAMAAAAAAAKAA0AAgAMAAEAAAAKAA4AAgAMAAIAAAAKAA8AAgAMAAAAAAALAAwAAgANAAAAAAALAA0AAgANAAEAAAALAA4AAgANAAIAAAALAA8AAgANAAAAAAAMAAwAAgAKAAAAAAAMAA0AAgAKAAEAAAAMAA4AAgAKAAIAAAAMAA8AAgAKAAAAAAANAAwAAgALAAAAAAANAA0AAgALAAEAAAANAA4AAgALAAIAAAANAA8AAgALAAAAAAAOAAwAAgAMAAAAAAAOAA0AAgAMAAEAAAAOAA4AAgAMAAIAAAAOAA8AAgAMAAAAAAAPAAwAAgANAAAAAAAPAA0AAgANAAEAAAAPAA4AAgANAAIAAAAPAA8AAgANAAAAAAAQAAwAAgAKAAAAAAAQAA0AAgAKAAEAAAAQAA4AAgAKAAIAAAAQAA8AAgAKAAAAAAARAAwAAgALAAAAAAARAA0AAgALAAEAAAARAA4AAgALAAIAAAARAA8AAgALAAAAAAASAAwAAgAMAAAAAAASAA0AAgAMAAEAAAASAA4AAgAMAAIAAAASAA8AAgAMAAAAAAATAAwAAgANAAAAAAATAA0AAgANAAEAAAATAA4AAgANAAIAAAATAA8AAgANAAAAAAAUAAwAAgAKAAAAAAAUAA0AAgAKAAEAAAAUAA4AAgAKAAIAAAAUAA8AAgAKAAAAAAAVAAwAAgALAAAAAAAVAA0AAgALAAEAAAAVAA4AAgALAAIAAAAVAA8AAgALAAAAAAAWAAwAAgAMAAAAAAAWAA0AAgAMAAEAAAAWAA4AAgAMAAIAAAAWAA8AAgAMAAAAAAAXAAwAAgANAAAAAAAXAA0AAgANAAEAAAAXAA4AAgANAAIAAAAXAA8AAgANAAAAAAAAABkAAgAGAAgAAAAAABoAAgAGAAkAAAABABkAAgAHAAgAAAABABoAAgAHAAkAAAAAABsAAgAGAAgAAAABABsAAgAHAAgAAAACABkAAgAGAAgAAAACABoAAgAGAAkAAAADABkAAgAHAAgAAAADABoAAgAHAAkAAAACABsAAgAGAAgAAAADABsAAgAHAAgAAAAEABkAAgAGAAgAAAAEABoAAgAGAAkAAAAFABkAAgAHAAgAAAAFABoAAgAHAAkAAAAEABsAAgAGAAgAAAAFABsAAgAHAAgAAAAGABkAAgAGAAgAAAAGABoAAgAGAAkAAAAHABkAAgAHAAgAAAAHABoAAgAHAAkAAAAGABsAAgAGAAgAAAAHABsAAgAHAAgAAAAIABkAAgAGAAgAAAAIABoAAgAGAAkAAAAJABkAAgAHAAgAAAAJABoAAgAHAAkAAAAIABsAAgAGAAgAAAAJABsAAgAHAAgAAAAKABkAAgAGAAgAAAAKABoAAgAGAAkAAAALABkAAgAHAAgAAAALABoAAgAHAAkAAAAKABsAAgAGAAgAAAALABsAAgAHAAgAAAAMABkAAgAGAAgAAAAMABoAAgAGAAkAAAANABkAAgAHAAgAAAANABoAAgAHAAkAAAAMABsAAgAGAAgAAAANABsAAgAHAAgAAAAOABkAAgAGAAgAAAAOABoAAgAGAAkAAAAPABkAAgAHAAgAAAAPABoAAgAHAAkAAAAOABsAAgAGAAgAAAAPABsAAgAHAAgAAAAQABkAAgAGAAgAAAAQABoAAgAGAAkAAAARABkAAgAHAAgAAAARABoAAgAHAAkAAAAQABsAAgAGAAgAAAARABsAAgAHAAgAAAASABkAAgAGAAgAAAASABoAAgAGAAkAAAATABkAAgAHAAgAAAATABoAAgAHAAkAAAASABsAAgAGAAgAAAATABsAAgAHAAgAAAAUABkAAgAGAAgAAAAUABoAAgAGAAkAAAAVABkAAgAHAAgAAAAVABoAAgAHAAkAAAAUABsAAgAGAAgAAAAVABsAAgAHAAgAAAAWABkAAgAGAAgAAAAWABoAAgAGAAkAAAAXABkAAgAHAAgAAAAXABoAAgAHAAkAAAAWABsAAgAGAAgAAAAXABsAAgAHAAgAAAAAABwAAQABAAgAAAABABwAAQACAAgAAAACABwAAQADAAgAAAADABwAAQAEAAgAAAAEABwAAQAFAAgAAAAFABwAAQAGAAgAAAAGABwAAQAHAAgAAAAHABwAAQAIAAgAAAAIABwAAQAJAAgAAAAJABwAAQAKAAgAAAAKABwAAQALAAgAAAALABwAAQAMAAgAAAAMABwAAQABAAgAAAANABwAAQACAAgAAAAOABwAAQADAAgAAAAPABwAAQAEAAgAAAAQABwAAQAFAAgAAAARABwAAQAGAAgAAAASABwAAQAHAAgAAAATABwAAQAIAAgAAAAUABwAAQAJAAgAAAAVABwAAQAKAAgAAAAWABwAAQALAAgAAAAXABwAAQAMAAgAAAAYABUAAQANAAcAAAAYABYAAQANAAUAAAAYABcAAQANAAYAAAAYABgAAQANAAcAAAAYABkAAQANAAUAAAAYABoAAQANAAYAAAAYABsAAQANAAcAAAAYABIAAQANAAcAAAAYABMAAQANAAUAAAAYABQAAQANAAYAAAAYAA8AAQANAAQAAAAYABAAAQANAAUAAAAYABEAAQANAAYAAAAYAAwAAQANAAEAAAAYAA0AAQANAAIAAAAYAA4AAQANAAMAAAAMAAsAAQABAAAAAAANAAsAAQACAAAAAAAOAAsAAQADAAAAAAAPAAsAAQAEAAAAAAAQAAsAAQAFAAAAAAARAAsAAQAGAAAAAAASAAsAAQAHAAAAAAATAAsAAQAIAAAAAAAUAAsAAQAJAAAAAAAVAAsAAQAKAAAAAAAWAAsAAQALAAAAAAAXAAsAAQAMAAAAAAAAAAsAAQABAAAAAAABAAsAAQACAAAAAAACAAsAAQADAAAAAAADAAsAAQAEAAAAAAAEAAsAAQAFAAAAAAAFAAsAAQAGAAAAAAAGAAsAAQAHAAAAAAAHAAsAAQAIAAAAAAAIAAsAAQAJAAAAAAAJAAsAAQAKAAAAAAAKAAsAAQALAAAAAAALAAsAAQAMAAAAAAD//wwAAQAAAAEAAAD//w0AAQAAAAIAAAD//w4AAQAAAAMAAAD//w8AAQAAAAQAAAD//xAAAQAAAAUAAAD//xEAAQAAAAYAAAD//xIAAQAAAAcAAAD//xUAAQAAAAIAAAD//xYAAQAAAAMAAAD//xcAAQAAAAQAAAD//xgAAQAAAAUAAAD//xkAAQAAAAYAAAD//xoAAQAAAAcAAAD//xsAAQAAAAcAAAD//xQAAQAAAAEAAAA=")
tile_set = ExtResource("1_nc76c")

[node name="TileMapLayer" type="TileMapLayer" parent="Level"]
tile_map_data = PackedByteArray("AAAKAA0AAgAZAEQAAAAKAA4AAgAZAEUAAAALAA0AAgAaAEQAAAALAA4AAgAaAEUAAAAMAA0AAgAbAEQAAAAMAA4AAgAbAEUAAAAOAA8AAgAqADEAAAAPAA8AAgArADEAAAAGAA0AAgAYAEQAAAAGAA4AAgAYAEUAAAAHAA0AAgAZAEQAAAAHAA4AAgAZAEUAAAAIAA0AAgAaAEQAAAAIAA4AAgAaAEUAAAAJAA0AAgAbAEQAAAAJAA4AAgAbAEUAAAAGAA8AAgAgACEAAAAGABAAAgAgACIAAAAGABEAAgAgACMAAAAGABIAAgAgACQAAAAHAA8AAgAhACEAAAAHABAAAgAhACIAAAAHABEAAgAhACMAAAAHABIAAgAhACQAAAAIAA8AAgAiACEAAAAIABAAAgAiACIAAAAIABEAAgAiACMAAAAIABIAAgAiACQAAAAJAA8AAgAjACEAAAAJABAAAgAjACIAAAAJABEAAgAjACMAAAAJABIAAgAjACQAAAAKABAAAgAmACIAAAAKABEAAgAmACMAAAAKABIAAgAmACQAAAALABAAAgAkACIAAAALABEAAgAnACMAAAALABIAAgAnACQAAAAMABAAAgAkACIAAAAMABEAAgAkACMAAAAMABIAAgAkACQAAAANABAAAgAlACIAAAANABEAAgAlACMAAAANABIAAgAlACQAAAAOABAAAgAqADIAAAAOABEAAgAqADMAAAAOABIAAgAqADQAAAAPABAAAgArADIAAAAPABEAAgArADMAAAAPABIAAgArADQAAAAFAA0AAgAXAEQAAAAFAA4AAgAXAEUAAAANAA0AAgAZAEQAAAANAA4AAgAZAEUAAAAOAA0AAgAaAEQAAAAOAA4AAgAaAEUAAAAPAA0AAgAbAEQAAAAPAA4AAgAbAEUAAAAQAA0AAgAcAEQAAAAQAA4AAgAcAEUAAAAQAA8AAgAcAEYAAAAQABAAAgAcAEcAAAARAA0AAgAdAEQAAAARAA4AAgAdAEUAAAARAA8AAgAdAEYAAAARABAAAgAdAEcAAAAIABYAAgAOAAIAAAAIABcAAgAOAAMAAAAIABgAAgAOAAQAAAAIABkAAgAOAAUAAAAIABoAAgAOAAYAAAAIABsAAgAOAAcAAAAJABYAAgAPAAIAAAAJABcAAgAPAAMAAAAJABgAAgAPAAQAAAAJABkAAgAPAAUAAAAJABoAAgAPAAYAAAAJABsAAgAPAAcAAAAKABYAAgAQAAIAAAAKABcAAgAQAAMAAAAKABgAAgAQAAQAAAAKABkAAgAQAAUAAAAKABoAAgAQAAYAAAAKABsAAgAQAAcAAAALABYAAgARAAIAAAALABcAAgARAAMAAAALABgAAgARAAQAAAALABkAAgARAAUAAAALABoAAgARAAYAAAALABsAAgARAAcAAAAMABYAAgASAAIAAAAMABcAAgASAAMAAAAMABgAAgASAAQAAAAMABkAAgASAAUAAAAMABoAAgASAAYAAAAMABsAAgASAAcAAAANABYAAgATAAIAAAANABcAAgATAAMAAAANABgAAgATAAQAAAANABkAAgATAAUAAAANABoAAgATAAYAAAANABsAAgATAAcAAAAEAA8AAgAaAFwAAAAEABAAAgAaAF0AAAAFAA8AAgAbAFwAAAAFABAAAgAbAF0AAAASAA4AAgAKAFoAAAASAA8AAgAKAFsAAAATAA4AAgALAFoAAAATAA8AAgALAFsAAAACAA0AAgAGAFwAAAACAA4AAgAGAF0AAAADAA0AAgAHAFwAAAADAA4AAgAHAF0AAAATABEAAgAKAFAAAAATABIAAgAKAFEAAAAUABEAAgALAFAAAAAUABIAAgALAFEAAAA=")
tile_set = ExtResource("1_nc76c")

[node name="Player" parent="Level" instance=ExtResource("2_e18hr")]
z_index = 5
position = Vector2(59, 303)

[node name="Camera2D" type="Camera2D" parent="Level/Player"]
position = Vector2(0, 2)
zoom = Vector2(3, 3)
limit_left = 0
limit_bottom = 705
limit_smoothed = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.4
drag_top_margin = 0.4
drag_right_margin = 0.4
drag_bottom_margin = 0.4
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="PointLight2D" type="PointLight2D" parent="Level/Player"]
position = Vector2(6, 8)
scale = Vector2(0.496094, 0.423828)
energy = 0.3
texture = ExtResource("3_ey2ef")
texture_scale = 0.5

[node name="TileMapLayer3" type="TileMapLayer" parent="Level"]
tile_map_data = PackedByteArray("AAALAA8AAgAmAB0AAAALABAAAgAmAB4AAAAMAA8AAgAnAB0AAAAMABAAAgAnAB4AAAAJABcAAgASAGoAAAAJABgAAgASAGsAAAAJABkAAgASAGwAAAAJABoAAgASAG0AAAAKABcAAgATAGoAAAAKABgAAgATAGsAAAAKABkAAgATAGwAAAAKABoAAgATAG0AAAALABcAAgAUAGoAAAALABgAAgAUAGsAAAALABkAAgAUAGwAAAALABoAAgAUAG0AAAAMABcAAgATAGoAAAAMABgAAgATAGsAAAAMABkAAgATAGwAAAAMABoAAgATAG0AAAANABcAAgAVAGoAAAANABgAAgAVAGsAAAANABkAAgAVAGwAAAANABoAAgAVAG0AAAAHABcAAgAYAHAAAAAHABgAAgAYAHEAAAAIABcAAgAZAHAAAAAIABgAAgAZAHEAAAAHABkAAgAYAHAAAAAIABkAAgAZAHAAAAAHABoAAgAYAHEAAAAIABoAAgAZAHEAAAAOABcAAgAaAHAAAAAOABgAAgAaAHEAAAAPABcAAgAbAHAAAAAPABgAAgAbAHEAAAAOABkAAgAaAHAAAAAOABoAAgAaAHEAAAAPABkAAgAbAHAAAAAPABoAAgAbAHEAAAAGABAAAgAWAF4AAAAGABEAAgAWAF8AAAAHABAAAgAXAF4AAAAHABEAAgAXAF8AAAA=")
tile_set = ExtResource("1_nc76c")

[node name="PanArea" type="Area2D" parent="Level/TileMapLayer3"]
script = ExtResource("4_ey2ef")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/TileMapLayer3/PanArea"]
position = Vector2(111, 286)
shape = SubResource("RectangleShape2D_xwycb")

[node name="PanSizzle" type="AudioStreamPlayer2D" parent="Level/TileMapLayer3/PanArea"]
stream = ExtResource("5_m3c88")

[node name="CloseSfx" type="AudioStreamPlayer2D" parent="Level/TileMapLayer3/PanArea"]

[node name="Prompt" type="Label" parent="Level/TileMapLayer3/PanArea"]
offset_right = 40.0
offset_bottom = 23.0

[node name="AmbienceFootsteps" type="AudioStreamPlayer2D" parent="Level/TileMapLayer3/PanArea"]
stream = ExtResource("6_m3c88")

[node name="TileMapLayer4" type="TileMapLayer" parent="Level"]
tile_map_data = PackedByteArray("AAALABgAAgAUAFgAAAAMABgAAgAVAFgAAAAMABkAAgAVAFkAAAAJABgAAgAaAF8AAAAJABkAAgAaAGAAAAAKABgAAgAbAF8AAAAKABkAAgAbAGAAAAA=")
tile_set = ExtResource("1_nc76c")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.197937, 0.197937, 0.197937, 1)

[node name="door_c" parent="." instance=ExtResource("4_m3c88")]
position = Vector2(10, 320)
rotation = 1.5708
target_scene = "res://Scenes/Levels/ทางเดิน.tscn"
target_door = "door_c"
door_id = "door_c"
